--- a/ArduinoFrontend/src/app/code-editor/code-editor.component.html
+++ b/ArduinoFrontend/src/app/code-editor/code-editor.component.html
@@ -9,6 +9,8 @@
     <div class="inline-block"
       style="display: flex; background-color:whitesmoke; justify-content: space-between;margin:auto;">
       <span style="flex:1 1 auto;"></span>
+      <button class="btn btn-light btn-sm  mb-1 mt-2 mr-1 " matTooltip="Generate code" style="font-size: 16px; max-height:30px;background: transparent;"
+        (click)="GenerateCode()"><i class="fas fa-laptop-code"></i></button>
       <button class="btn btn-light btn-sm  mb-1 mt-2 mr-1 " matTooltip="Download ino file" style="font-size: 16px; max-height:30px;background: transparent;"
         (click)="DownloadCode()"><i class="fa fa-download"></i></button>
       <button class="btn btn-light btn-sm mb-1 mt-2 mr-1 " matTooltip="Include Library" style="font-size:16px; max-height:30px;background: transparent;"
